--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-appconf==1.0.1
 django-compressor==2.0
 django-debug-toolbar==1.4
 django-libsass==0.6
+django-sass-processor==0.3.4
 django-toolbelt==0.0.1
 djangorestframework==3.3.2
 ecdsa==0.13
